[workspace]
members = [
    "ch001-hello",
    "ch011-vector",
    "ch012-hashmap-hashset",
    "ch013-iterator",
    "ch014-time-chrono",
    "ch015-thread",
    "ch016-scope-thread",
    "ch017-share-thread-data",
    "ch018-message-passing",
    "ch019-file-api",
    "ch020-cargo-tool",
    "ch021-parse-cli-args",
    "ch022-parse-args-with-clap",
    "ch023-json",
    "ch024-send-http",
    "ch025-dynamic-dispatch",
    "ch026-default-trait",
    "ch027-operator-overloading"]

resolver = "3"
